# Hybrid-PKI-Lab-Classical-and-Post-Quantum-PKI-in-Python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.pqc  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  security.yml  tests.yml
benchmarks/: __init__.py  benchmark_handshake.py  benchmark_keygen.py  benchmark_signatures.py
docs/: 01_pki_classique.md  02_pki_hybride.md  03_pqc_algorithms.md  04_certificate_lifecycle.md  05_security_model.md  06_attack_scenarios.md  07_docker_pqc_setup.md  08_api_usage.md  09_project_architecture.md  10_security_model_and_limitations.md  11_demo_scenarios.md  12_roadmap.md  13_troubleshooting.md
docs/diagrams/source/: hybrid_certificate.mmd  hybrid_handshake.mmd  pki_chain.mmd
examples/: classical_pki_demo.py  hybrid_pki_demo.py
scripts/: generate_diagrams.py
src/hybrid_pki/: __init__.py  cli.py  config.py
src/hybrid_pki/api/: main.py  routes_benchmarks.py  routes_classical.py  routes_hybrid.py  routes_pqc.py
src/hybrid_pki/classical/: __init__.py  ca.py  certificate.py  chain_validation.py  keygen.py  revocation.py
src/hybrid_pki/hybrid/: __init__.py  hybrid_certificate.py  hybrid_handshake.py  hybrid_policy.py  hybrid_signatures.py  hybrid_validation.py
src/hybrid_pki/pqc/: __init__.py  ml_dsa.py  ml_kem.py  oqs_provider.py  pqc_serialization.py
src/hybrid_pki_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api_benchmarks.py  test_api_benchmarks_extended.py  test_api_classical_workflow.py  test_api_core.py  test_api_error_handling.py  test_api_hybrid.py  test_benchmarks.py  test_classical_keygen_extended.py  test_hybrid.py  test_hybrid_certificate_extended.py  test_hybrid_policy_extended.py  test_pqc.py  test_pqc_serialization_extended.py  test_smoke.py
